Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   src/index.css

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,12 @@ body {
   text-shadow: 3px 3px 5px hsla(0, 0%, 0%, 0.74);
   text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+  .clock {
+    font-size: 4rem;
+  }
+  .clock-container {
+    width: 50vh;
+  }
+}
